--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "axios": "^1.11.0",
     "lucide-react": "^0.535.0",
     "qrcode.react": "^4.2.0",
     "react": "^19.1.1",
